# plain_fsm

./: README.md
examples/simple/: CMakeLists.txt  main.cpp
examples/tree/: CMakeLists.txt  events.h  main.cpp  parent.cpp  parent.h  parent_state2_states.cpp  parent_state2_states.h  parent_states.cpp  parent_states.h
include/: plain_fsm.h
